public static class TagManager
{
    // Tags for Game Objects
    public static string PLAYER_TAG = "Player";
    public static string HIDDEN_TAG = "Hidden";
    public static string COLLECTABLE_TAG = "Collectable";

    // String base for inputs
    public static string HORIZONTAL_TAG = "Horizontal";
    public static string VERTICAL_TAG = "Vertical";

    // For animations
    // Player animations
    public static string ISRUNNING_ANIMATION_NAME = "isRunning";
    public static string ISJUMPING_ANIMATION_NAME = "isJumping";
    public static string CANDOUBLE_ANIMATION_NAME = "canDouble";
    public static string ISFALLING_ANIMATION_NAME = "isFalling";
    public static string DYING_ANIMATION_NAME = "Dying";

    //Level Finished tag
    public static string LEVELFINISHED_ANIMATION_NAME = "LevelFinished";
}
